@@ -1,4 +1,8 @@
+1/10/23:
+-Another fix to transforms (rotations behaviour wrong)
+
 28/9/23:
+-Transform inheritance math fixed, setabsoluteX functions fixed
 -LookAt transform fixed
 
 27/9/23:
